--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     font-family: 'Red Hat Display', sans-serif;
     max-width: 1440px;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -30,7 +30,7 @@ body {
 }
 
 .card-body {
-    padding: 55px 50px;
+    padding: 45px 50px;
 }
 
 .bold {
